fixed font style on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,6 @@
   align-items: center;
   justify-content: space-between;
   background: #060a22;
-  font-family: "Segoe Print";
 
   &__images {
     display: block;
@@ -86,6 +85,8 @@
     min-width: 240px;
     margin-top: 80px;
     text-align: center;
+    font-family: cursive;
+    font-style: italic;
   }
 
   &__footer {
@@ -98,7 +99,8 @@
         rgba(21, 59, 44, 1) 59%,
         rgba(31, 30, 30, 1) 100%);
     color: white;
-    font-family: "Segoe Print";
+    font-family: cursive;
+    font-style: italic;
 
     .footerItem {
       &__heart {
@@ -131,7 +133,7 @@
       margin-right: 40px;
       width: 150px;
       align-items: center;
-      font-family: Consolas;
+      font-family: monospace;
 
       &__logo {
         height: 40px;
@@ -220,6 +222,7 @@
       .assetItem {
         margin-right: 14px;
         max-width: 120px;
+        letter-spacing: -0.5px;
 
         &__logo {
           height: 30px;
